--- a/frontend/src/app/registro-usuario/registro-usuario.component.html
+++ b/frontend/src/app/registro-usuario/registro-usuario.component.html
@@ -48,8 +48,9 @@
       </label>
     </div>
   </form>
-  <div class="d-flex justify-content-center mt-5">
+  <div class="d-flex justify-content-around mt-5">
     <button type="submit" class="boton rounded-pill p-2">REGISTRARSE</button>
+    <a class="nav-link color boton rounded-pill" routerLink = "/homeUsuario">INICIAR SESIÓN</a>
   </div>
 </section>
 
