--- a/frontend/src/app/home-usuario/home-usuario.component.html
+++ b/frontend/src/app/home-usuario/home-usuario.component.html
@@ -10,24 +10,16 @@
         <form>
           <div class="row">
             <div class="col">
-              <input type="text" class="form-control" placeholder="Usuario">
+              <input [(ngModel)]="ingreso.documento" type="text" class="form-control" placeholder="*Documento">
             </div>
             <div class="col">
-              <input type="text" class="form-control" placeholder="Contraseña">
+              <input [(ngModel)]="ingreso.clave" type="password" class="form-control" placeholder="*Contraseña">
             </div>
           </div>
         </form>
         <div class="d-flex justify-content-around mt-5">
           <a class="nav-link color boton rounded-pill" routerLink = "/registroUsuario">REGISTRARSE</a>
-          <button type="submit" class="boton rounded-pill p-2">INGRESAR</button>
+          <button (click)="ingresar()" type="submit" class="boton rounded-pill p-2">INGRESAR</button>
         </div>
         </div>
-      <!-- <li class="boton rounded-pill">
-        <a class="nav-link color" routerLink = "/ingresoUsuario">INICIAR SESIÓN</a>
-      </li> -->
-      <!-- <ul class="nav justify-content-around mt-5 mb-3">
-        <li class="boton rounded-pill">
-          <a class="nav-link color" routerLink = "/registroUsuario">REGISTRARSE</a>
-        </li>
-      </ul> -->
   </section>
