--- a/frontend/src/app/ingreso-admin/ingreso-admin.component.html
+++ b/frontend/src/app/ingreso-admin/ingreso-admin.component.html
@@ -1,32 +1,23 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
   integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-
-<div class="container login" onsubmit="validarFormulario(event)">
-
+<div class="container mt-5" >
   <form class="formSigning d-flex flex-column m-auto">
-    <h4 class="align-self-center mt-4">INICIAR SESIÓN</h4>
 
     <div class="campos d-flex flex-column ml-5 mr-5">
-      <label for="" class="mt-2">Usuario</label>
-      <input type="text" id="user">
+      <label for="" class="mt-3">Usuario</label>
+      <input type="text" class="form-control">
     </div>
 
     <div class="campos d-flex flex-column ml-5 mr-5">
       <label for="" class="mt-3">Contraseña</label>
-      <input type="password" id="psw">
+      <input type="text" class="form-control">
     </div>
 
-    <div class="campos d-flex justify-content-around ml-5 mr-5 mt-3 ">
-      <input type="checkbox" id="recordarme" class="mb-3">
-      <label class="recordar" for="recordarme"> Recordarme</label>
-      <p class="campos"> | </p>
-      <a href="#">Recuperar Contraseña</a>
+    <div class="d-flex justify-content-around mt-5">
+      <button type="submit" class="boton rounded-pill p-2">INGRESAR</button>
     </div>
 
-    <div class="d-flex justify-content-center mt-2 mb-3">
-      <input type="submit" value="Ingresar" class="align-self-center botonIngresar">
-    </div>
   </form>
 </div>
 
