--- a/frontend/src/app/registro-usuario/registro-usuario.component.html
+++ b/frontend/src/app/registro-usuario/registro-usuario.component.html
@@ -1,55 +1,61 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
   integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-<section class="container">
+<section class="container mt-5">
   <form>
     <div class="row">
       <div class="col">
         <label for="formGroupExampleInput">*Nombres</label>
-        <input type="text" class="form-control" placeholder="Juan Fernando">
+        <input [(ngModel)]="registrarUsuario.nombre" type="text" class="form-control" placeholder="Juan Fernando">
       </div>
       <div class="col">
         <label for="formGroupExampleInput">*Apellidos</label>
-        <input type="text" class="form-control" placeholder="Castellanos Sánchez">
+        <input [(ngModel)]="registrarUsuario.apellido" type="text" class="form-control" placeholder="Castellanos Sánchez">
       </div>
     </div>
     <div class="row mt-3">
-      <div class="col">
-        <label for="inputState">*Tipo documento</label>
-        <select id="inputState" class="form-control">
-          <option selected>Cédula de Ciudadanía</option>
-          <option>Cédula de Extranjería</option>
-          <option>Permiso especial de permanencia</option>
-        </select>
-      </div>
       <div class="col">
         <label for="formGroupExampleInput">*Documento</label>
-        <input type="text" class="form-control" placeholder="80902035">
+        <input [(ngModel)]="registrarUsuario.documento" type="text" class="form-control" placeholder="80902035">
       </div>
-    </div>
-    <div class="row mt-3">
       <div class="col">
         <label for="inputState">*Sexo</label>
-        <select id="inputState" class="form-control">
+        <select [(ngModel)]="registrarUsuario.sexo" id="inputState" class="form-control">
           <option selected>Femenino</option>
           <option>Masculino</option>
           <option>Otro</option>
         </select>
       </div>
+    </div>
+    <div class="row mt-3">
       <div class="col mt-4    ">
         <label for="inputState">*Fecha de nacimiento</label>
-        <input type="date" id="start" name="trip-start" value="2020-10-28" min="1955-01-01" max="2002-12-31">
+        <input [(ngModel)]="registrarUsuario.fechaNacim" type="date" id="start" name="trip-start" value="2020-10-28" min="1955-01-01" max="2002-12-31">
+      </div>
+      <div class="col">
+        <label for="formGroupExampleInput">*Enfermedades Previas</label>
+        <input [(ngModel)]="registrarUsuario.preMedica"type="text" class="form-control" placeholder="Sobrepeso">
       </div>
     </div>
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" id="gridCheck">
+    <div class="row mt-3">
+      <div class="col">
+        <label for="formGroupExampleInput">*Cargo</label>
+        <input [(ngModel)]="registrarUsuario.cargo" type="text" class="form-control" placeholder="Mensajero">
+      </div>
+      <div class="col">
+        <label for="formGroupExampleInput">*Contraseña</label>
+        <input [(ngModel)]="registrarUsuario.clave" type="password" class="form-control" placeholder="Mayo1234+">
+      </div>
+    </div>
+    <div class="form-check mt-2">
+      <input [(ngModel)]="registrarUsuario.usoDatos" class="form-check-input" type="checkbox" id="gridCheck">
       <label class="form-check-label" for="gridCheck">
         Autorizo el tratamiento de mis datos personales
       </label>
     </div>
   </form>
   <div class="d-flex justify-content-around mt-5">
-    <button type="submit" class="boton rounded-pill p-2">REGISTRARSE</button>
+    <button (click)="registrar()" type="submit" class="boton rounded-pill p-2">REGISTRARSE</button>
     <a class="nav-link color boton rounded-pill" routerLink = "/homeUsuario">INICIAR SESIÓN</a>
   </div>
 </section>
