--- a/frontend/src/app/registro-usuario/registro-usuario.component.html
+++ b/frontend/src/app/registro-usuario/registro-usuario.component.html
@@ -16,7 +16,7 @@
     <div class="row mt-3">
       <div class="col">
         <label for="formGroupExampleInput">*Documento</label>
-        <input [(ngModel)]="registrarUsuario.documento" type="text" class="form-control" placeholder="80902035">
+        <input [(ngModel)]="registrarUsuario.documento" type="number" class="form-control" placeholder="80902035">
       </div>
       <div class="col">
         <label for="inputState">*Sexo</label>
