--- a/frontend/src/app/home-usuario/home-usuario.component.html
+++ b/frontend/src/app/home-usuario/home-usuario.component.html
@@ -10,16 +10,16 @@
         <form>
           <div class="row">
             <div class="col">
-              <input [(ngModel)]="ingreso.documento" type="text" class="form-control" placeholder="*Documento">
+              <input [(ngModel)]="ingresoUsuario.documento" type="number" class="form-control" placeholder="*Documento">
             </div>
             <div class="col">
-              <input [(ngModel)]="ingreso.clave" type="password" class="form-control" placeholder="*Contraseña">
+              <input [(ngModel)]="ingresoUsuario.clave" type="password" class="form-control" placeholder="*Contraseña">
             </div>
           </div>
         </form>
         <div class="d-flex justify-content-around mt-5">
           <a class="nav-link color boton rounded-pill" routerLink = "/registroUsuario">REGISTRARSE</a>
-          <button (click)="ingresar()" type="submit" class="boton rounded-pill p-2">INGRESAR</button>
+          <button (click)="ingresarUsuario()" type="submit" class="boton rounded-pill p-2">INGRESAR</button>
         </div>
         </div>
   </section>
