--- a/frontend/src/app/ingreso-admin/ingreso-admin.component.html
+++ b/frontend/src/app/ingreso-admin/ingreso-admin.component.html
@@ -5,19 +5,18 @@
   <form class="formSigning d-flex flex-column m-auto">
 
     <div class="campos d-flex flex-column ml-5 mr-5">
-      <label for="" class="mt-3">Usuario</label>
-      <input type="text" class="form-control">
+      <label for="" class="mt-3">Documento</label>
+      <input [(ngModel)]="ingresoAdmin.documento" type="number" class="form-control">
     </div>
 
     <div class="campos d-flex flex-column ml-5 mr-5">
       <label for="" class="mt-3">Contraseña</label>
-      <input type="text" class="form-control">
+      <input [(ngModel)]="ingresoAdmin.clave" type="text" class="form-control">
     </div>
 
     <div class="d-flex justify-content-around mt-5">
-      <button type="submit" class="boton rounded-pill p-2">INGRESAR</button>
+      <button (click)="ingresarAdmin()" type="submit" class="boton rounded-pill p-2">INGRESAR</button>
     </div>
-
   </form>
 </div>
 
