--- a/frontend/src/app/ingreso-admin/ingreso-admin.component.html
+++ b/frontend/src/app/ingreso-admin/ingreso-admin.component.html
@@ -2,16 +2,16 @@
   integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
 <div class="container mt-5" >
-  <form class="formSigning d-flex flex-column m-auto">
+  <form #ingresarUsuarioForm ="ngForm" (ngSubmit)= "ingresarAdmin();" class="formSigning d-flex flex-column m-auto">
 
     <div class="campos d-flex flex-column ml-5 mr-5">
       <label for="" class="mt-3">Documento</label>
-      <input [(ngModel)]="ingresoAdmin.documento" type="number" class="form-control">
+      <input type="number" name="documento" id="documento" #documento="ngModel" [(ngModel)]="ingresoAdmin.documento"  class="form-control">
     </div>
 
     <div class="campos d-flex flex-column ml-5 mr-5">
       <label for="" class="mt-3">Contraseña</label>
-      <input [(ngModel)]="ingresoAdmin.clave" type="text" class="form-control">
+      <input type="password" name="clave" id="clave" #clave="ngModel" [(ngModel)]="ingresoAdmin.clave" class="form-control">
     </div>
 
     <div class="d-flex justify-content-around mt-5">
