--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -15,6 +15,9 @@
       <li class="nav-item menuLetra">
         <a class="nav-link" routerLink = "ingresoAdmin">ADMINISTRADOR</a>
       </li>
+      <li class="nav-item menuLetra">
+        <a class="nav-link" routerLink = "">SALIR</a>
+      </li>
     </ul>
   </div>
 </nav>
