--- a/frontend/src/app/gestion-admin/gestion-admin.component.html
+++ b/frontend/src/app/gestion-admin/gestion-admin.component.html
@@ -1,1 +1,10 @@
-<p>gestion-admin works!</p>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+  integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+<nav class="navbar navbar-light navAdmin">
+  <form class="form-inline justify-content-around">
+    <p>Bienvenid@:</p>
+    <button class="btn btn-sm btn-outline-secondary" type="button">Seguimiento síntomas</button>
+    <button class="btn btn-sm btn-outline-secondary" type="button">Modificar datos usuarios</button>
+  </form>
+</nav>
