--- a/frontend/src/app/consultar-sintomas/consultar-sintomas.component.html
+++ b/frontend/src/app/consultar-sintomas/consultar-sintomas.component.html
@@ -1,1 +1,21 @@
-<p>consultar-sintomas works!</p>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+  integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+<nav class="navbar navbar-expand-lg navAdmin justify-content-betwen">
+  <p class="menuLetra">BIENVENID@: </p>
+  <div></div>
+  <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+    <ul class="navbar-nav ">
+      <li class="nav-item active menuLetra align-items-end">
+        <a class="nav-link active" routerLink="/gestionAdmin">VER TODOS LOS REGISTROS</a>
+      </li>
+      <li class="nav-item active menuLetra align-items-end">
+        <a class="nav-link active" routerLink="/consultarSintomas">VER REGISTROS POR DOCUMENTO</a>
+      </li>
+      <li class="nav-item menuLetra">
+        <a class="nav-link" routerLink="/modificarUsuario">MODIFICAR USUARIOS</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
