--- a/frontend/src/app/gestion-admin/gestion-admin.component.html
+++ b/frontend/src/app/gestion-admin/gestion-admin.component.html
@@ -1,10 +1,64 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
   integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-<nav class="navbar navbar-light navAdmin">
-  <form class="form-inline justify-content-around">
-    <p>Bienvenid@:</p>
-    <button class="btn btn-sm btn-outline-secondary" type="button">Seguimiento síntomas</button>
-    <button class="btn btn-sm btn-outline-secondary" type="button">Modificar datos usuarios</button>
-  </form>
+<nav class="navbar navbar-expand-lg navAdmin justify-content-betwen">
+  <p class="menuLetra">BIENVENID@: </p>
+  <div></div>
+  <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+    <ul class="navbar-nav ">
+      <li class="nav-item active menuLetra align-items-end">
+        <a class="nav-link active" routerLink="/gestionAdmin">VER TODOS LOS REGISTROS</a>
+      </li>
+      <li class="nav-item active menuLetra align-items-end">
+        <a class="nav-link active" routerLink="/consultarSintomas">VER REGISTROS POR DOCUMENTO</a>
+      </li>
+      <li class="nav-item menuLetra">
+        <a class="nav-link" routerLink="/modificarUsuario">MODIFICAR USUARIOS</a>
+      </li>
+    </ul>
+  </div>
 </nav>
+
+<div class="m-2">
+
+    <table class="table table-sm">
+        <thead>
+          <tr>
+            <th scope="col">Documento</th>
+            <th scope="col">Nombre</th>
+            <th scope="col">Apellido</th>
+            <th scope="col">Dolor de garganta</th>
+            <th scope="col">Malestar general</th>
+            <th scope="col">Tempreratura > 37.5°</th>
+            <th scope="col">Tos seca de origen reciente</th>
+            <th scope="col">Dificultad Respiratoria</th>
+            <th scope="col">Pérdida de olfato/gusto</th>
+            <th scope="col">Aislamiento preventivo COVID-19</th>
+            <th scope="col">Aislamiento Postivo COVID-19</th>
+            <th scope="col">Convivencia postivo Covid</th>
+            <th scope="col">Contacto sospechoso Covid</th>
+            <th scope="col">Sintomas nasales</th>
+            <th scope="col">Fatiga</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Jacob</td>
+            <td>Thornton</td>
+            <td>@fat</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td colspan="2">Larry the Bird</td>
+            <td>@twitter</td>
+          </tr>
+        </tbody>
+      </table>
+</div>
