--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
 <nav class="navbar navbar-expand-lg menu">
-  <img src="../../assets/img/Logo4.png" alt="logo">
+  <img src="../../assets/img/Logo4.png" alt="logo" width="120" height="120">
   <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
