--- a/frontend/src/app/modificar-usuario/modificar-usuario.component.html
+++ b/frontend/src/app/modificar-usuario/modificar-usuario.component.html
@@ -1,1 +1,67 @@
-<p>modificar-usuario works!</p>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+  integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+<nav class="navbar navbar-expand-lg navAdmin justify-content-betwen">
+  <p class="menuLetra">BIENVENID@: </p>
+  <div></div>
+  <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+    <ul class="navbar-nav ">
+      <li class="nav-item active menuLetra align-items-end">
+        <a class="nav-link active" routerLink="/gestionAdmin">VER TODOS LOS REGISTROS</a>
+      </li>
+      <li class="nav-item active menuLetra align-items-end">
+        <a class="nav-link active" routerLink="/consultarSintomas">VER REGISTROS POR DOCUMENTO</a>
+      </li>
+      <li class="nav-item menuLetra">
+        <a class="nav-link" routerLink="/modificarUsuario">MODIFICAR USUARIOS</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+<section class="container mt-5">
+    <form>
+      <div class="row">
+        <div class="col">
+          <label for="formGroupExampleInput">*Nombres</label>
+          <input type="text" class="form-control" placeholder="Juan">
+        </div>
+        <div class="col">
+          <label for="formGroupExampleInput">*Apellidos</label>
+          <input type="text" class="form-control" placeholder="Sánchez">
+        </div>
+      </div>
+      <div class="row mt-3">
+        <div class="col">
+          <label for="formGroupExampleInput">*Documento</label>
+          <input type="number" class="form-control" placeholder="80902035">
+        </div>
+        <div class="col">
+          <label for="inputState">*Sexo</label>
+          <!-- <select [(ngModel)]="registrarUsuario.sexo" id="inputState" class="form-control"> -->
+          <select class="form-control">
+            <option selected>Femenino</option>
+            <option>Masculino</option>
+            <option>Otro</option>
+          </select>
+        </div>
+      </div>
+      <div class="row mt-3">
+        <div class="col">
+          <label for="formGroupExampleInput">*Enfermedades Previas</label>
+          <input type="text" class="form-control" placeholder="Sobrepeso">
+        </div>
+      </div>
+      <div class="row mt-3">
+        <div class="col">
+          <label for="formGroupExampleInput">*Cargo</label>
+          <input type="text" class="form-control" placeholder="Mensajero">
+        </div>
+      </div>
+    </form>
+    <div class="d-flex justify-content-around mt-5">
+      <!-- <button (click)=" registroUsuario()" type="submit" class="boton rounded-pill p-2">REGISTRARSE</button> -->
+      <button  type="submit" class="boton rounded-pill p-2">MODIFICAR</button>
+      <!-- <a class="nav-link color boton rounded-pill" routerLink = "">MODIFICAR</a> -->
+    </div>
+  </section>
