--- a/frontend/src/app/reportar-sintomas/reportar-sintomas.component.html
+++ b/frontend/src/app/reportar-sintomas/reportar-sintomas.component.html
@@ -1,1 +1,14 @@
-<p>reportar-sintomas works!</p>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+  integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+<div class="container justify-content.between">
+    <div class="custom-control custom-radio custom-control-inline">
+        <p>¿Dolor de garganta?</p>
+        <input type="radio" id="customRadioInline1" name="customRadioInline1" class="custom-control-input">
+        <label class="custom-control-label" for="customRadioInline1">SI</label>
+      </div>
+      <div class="custom-control custom-radio custom-control-inline">
+        <input type="radio" id="customRadioInline2" name="customRadioInline1" class="custom-control-input">
+        <label class="custom-control-label" for="customRadioInline2">NO</label>
+      </div>
+</div>
