--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -16,6 +16,15 @@
         <a class="nav-link" routerLink = "ingresoAdmin">ADMINISTRADOR</a>
       </li>
       <li class="nav-item menuLetra">
+        <a class="nav-link" routerLink = "reportarSintomas">REPORTAR SINTOMAS</a>
+      </li>
+      <li class="nav-item menuLetra">
+        <a class="nav-link" routerLink = "modificarUsuario">MODIFICAR USUARIO</a>
+      </li>
+      <li class="nav-item menuLetra">
+        <a class="nav-link" routerLink = "gestionUsuario">AUTOCUIDADO</a>
+      </li>
+      <li class="nav-item menuLetra">
         <a class="nav-link" routerLink = "">SALIR</a>
       </li>
     </ul>
