--- a/frontend/src/app/gestion-admin/gestion-admin.component.html
+++ b/frontend/src/app/gestion-admin/gestion-admin.component.html
@@ -1,6 +1,12 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
   integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
+  <script src="https://kit.fontawesome.com/6888423b58.js" crossorigin="anonymous"></script>
+  <link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-shims.min.css" media="all" rel="stylesheet">
+  <link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-font-face.min.css" media="all"
+    rel="stylesheet">
+  <link href="https://kit-free.fontawesome.com/releases/latest/css/free.min.css" media="all" rel="stylesheet">
+
 <nav class="navbar navbar-expand-lg navAdmin justify-content-betwen">
   <p class="menuLetra">BIENVENID@: </p>
   <div></div>
