Ajuste backend y usuario modificar usuario

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -19,7 +19,7 @@
         <a *ngIf="auth.sesionActiva()" class="nav-link" routerLink = "reportarSintomas">REPORTAR SINTOMAS</a>
       </li>
       <li class="nav-item menuLetra">
-        <a *ngIf="auth.sesionActiva()" class="nav-link" routerLink = "modificarUsuario">MODIFICAR USUARIO</a>
+        <a *ngIf="auth.sesionActiva()" class="nav-link" routerLink = "modificarDatos">MODIFICAR USUARIO</a>
       </li>
       <li class="nav-item menuLetra">
         <a *ngIf="auth.sesionActiva()" class="nav-link" routerLink = "gestionUsuario">AUTOCUIDADO</a>
