Ajustes front admin

--- a/frontend/src/app/gestion-admin/gestion-admin.component.html
+++ b/frontend/src/app/gestion-admin/gestion-admin.component.html
@@ -8,15 +8,14 @@
   <link href="https://kit-free.fontawesome.com/releases/latest/css/free.min.css" media="all" rel="stylesheet">
 
 <nav class="navbar navbar-expand-lg navAdmin justify-content-betwen">
-  <p class="menuLetra">BIENVENID@: </p>
   <div></div>
   <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
     <ul class="navbar-nav ">
       <li class="nav-item active menuLetra align-items-end">
-        <a class="nav-link active" routerLink="/gestionAdmin">VER TODOS LOS REGISTROS</a>
+        <a class="nav-link active" routerLink="/gestionAdmin">VER REGISTROS</a>
       </li>
       <li class="nav-item active menuLetra align-items-end">
-        <a class="nav-link active" routerLink="/consultarSintomas">VER REGISTROS POR DOCUMENTO</a>
+        <a class="nav-link active" routerLink="/listarUsuarios">LISTAR USUARIOS</a>
       </li>
       <li class="nav-item menuLetra">
         <a class="nav-link" routerLink="/modificarUsuario">MODIFICAR USUARIOS</a>
@@ -25,7 +24,15 @@
   </div>
 </nav>
 
-<div class="m-2">
+<div class="">
+
+  <div class="container input-group mt-2 mb-2">
+    <input type="text" class="form-control" placeholder="Documento" aria-label="Documento" aria-describedby="button-addon2">
+    <div class="input-group-append">
+      <button class="btn boton" type="button" id="button-addon2">Buscar</button>
+    </div>
+  </div>
+
   <div class="row">
     <div class="col-md-1"></div>
     <div class="col-md-10">
@@ -35,6 +42,8 @@
             <th scope="col">Documento</th>
             <th scope="col">Nombre</th>
             <th scope="col">Apellido</th>
+            <th scope="col">Fecha</th>
+            <th scope="col">Jornada</th>
             <th scope="col">Dolor de garganta</th>
             <th scope="col">Malestar general</th>
             <th scope="col">Tempreratura > 37.5°</th>
@@ -54,6 +63,8 @@
             <td>{{ seguimiento.usuario.documento }}</td>
             <td>{{ seguimiento.usuario.nombre }}</td>
             <td>{{ seguimiento.usuario.apellido }}</td>
+            <td>{{ seguimiento.fecha }}</td>
+            <td>{{ seguimiento.jornada }}</td>
             <td class="text-center">
               <i *ngIf="seguimiento.garganta === true" class="text-danger fas fa-exclamation-circle"></i>
               <i *ngIf="seguimiento.garganta === false" class="text-success fas fa-check-circle"></i>
