--- a/frontend/src/app/gestion-usuario/gestion-usuario.component.html
+++ b/frontend/src/app/gestion-usuario/gestion-usuario.component.html
@@ -1,1 +1,26 @@
-<p>gestion-usuario works!</p>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+  integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+<div class="container mt-3">
+    <div class="card-columns">
+        <div class="card">
+          <img src="../../assets/img/navidad_espacio_publico_tw_1A.png" class="card-img-top" alt="...">
+        </div>
+        <div class="card">
+            <img src="../../assets/img/pieza18-fiestas reuniones.jpg" class="card-img-top" alt="...">
+          </div>
+          <div class="card">
+            <img src="../../assets/img/navidad_espacio_publico_tw_1B.png" class="card-img-top" alt="...">
+          </div>
+          <div class="card">
+            <img src="../../assets/img/pieza16-fiestas reuniones.jpg" class="card-img-top" alt="...">
+          </div>
+          <div class="card">
+            <img src="../../assets/img/navidad_espacio_publico_tw_5A.png" class="card-img-top" alt="...">
+          </div>
+          <div class="card">
+            <img src="../../assets/img/navidad_espacio_publico_tw_5B.png" class="card-img-top" alt="...">
+          </div>
+      </div>
+</div>
+
